almost there, need to find issue with SmartPathFinder